[gd_scene load_steps=36 format=2]

[ext_resource path="res://scenes/enemies/enemy_base/EnemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/death/assassin_death_3.png" type="Texture" id=2]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/walk/assassin_walk_0.png" type="Texture" id=3]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/attack/assassin_attack_08.png" type="Texture" id=4]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/attack/assassin_attack_06.png" type="Texture" id=5]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/attack/assassin_attack_07.png" type="Texture" id=6]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/walk/assassin_walk_2.png" type="Texture" id=7]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/death/assassin_death_7.png" type="Texture" id=8]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/attack/assassin_attack_01.png" type="Texture" id=9]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/death/assassin_death_2.png" type="Texture" id=10]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/death/assassin_death_6.png" type="Texture" id=11]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/death/assassin_death_5.png" type="Texture" id=12]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/attack/assassin_attack_04.png" type="Texture" id=13]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/attack/assassin_attack_05.png" type="Texture" id=14]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/attack/assassin_attack_02.png" type="Texture" id=15]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/attack/assassin_attack_09.png" type="Texture" id=16]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/walk/assassin_walk_3.png" type="Texture" id=17]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/death/assassin_death_4.png" type="Texture" id=18]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/walk/assassin_walk_1.png" type="Texture" id=19]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/attack/assassin_attack_00.png" type="Texture" id=20]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/attack/assassin_attack_03.png" type="Texture" id=21]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/walk/assassin_walk_4.png" type="Texture" id=22]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/walk/assassin_walk_5.png" type="Texture" id=23]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/idle/assassin_idle_0.png" type="Texture" id=24]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/idle/assassin_idle_2.png" type="Texture" id=25]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/idle/assassin_idle_3.png" type="Texture" id=26]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/death/assassin_death_0.png" type="Texture" id=27]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/death/assassin_death_1.png" type="Texture" id=28]
[ext_resource path="res://assets/level3 - factory/enemies/assassin/idle/assassin_idle_1.png" type="Texture" id=29]
[ext_resource path="res://scenes/enemies/level 3/melee/Melee.gd" type="Script" id=30]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 21 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 16 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 29 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 10 ), ExtResource( 2 ), ExtResource( 18 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 8 ) ],
"loop": true,
"name": "die",
"speed": 9.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 19 ), ExtResource( 7 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.5, 74.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31.5, 74 )

[sub_resource type="CircleShape2D" id=4]
radius = 312.002

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 39, 46 )

[node name="Melee" instance=ExtResource( 1 )]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 30 )
speed = 100.0
gravity = 400

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )

[node name="Body" parent="." index="1"]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="GroundDetect" type="RayCast2D" parent="." index="3"]
position = Vector2( -55, 77 )
enabled = true

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -0.5, 3 )
shape = SubResource( 3 )

[node name="CollisionShape2D" parent="DetectionRange" index="0"]
shape = SubResource( 4 )

[node name="AttackRange" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange" index="0"]
position = Vector2( -71, 0 )
shape = SubResource( 5 )

[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]
